--- a/css/style.css
+++ b/css/style.css
@@ -59,3 +59,10 @@ body {
 .menu button:hover {
   background: #008C45;
 }
+
+footer {
+  text-align: center;
+  margin: 24px 0;
+  color: #008c45;
+  font-size: 0.9rem;
+}
